--- a/FigmaApp/package.json
+++ b/FigmaApp/package.json
@@ -15,6 +15,8 @@
     "bootstrap": "^5.3.0-alpha1",
     "bootstrap-icons": "^1.10.3",
     "dotenv": "^16.0.3",
+    "primeicons": "^6.0.1",
+    "primereact": "^9.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
