--- a/FigmaApp/package.json
+++ b/FigmaApp/package.json
@@ -18,6 +18,7 @@
     "primeicons": "^6.0.1",
     "primereact": "^9.2.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "sass": "^1.59.3",
